# Project-Template

./: .gitignore  Dockerfile
app/: mypy.ini  pyproject.toml
